adding zod and creating, applying common modal component to login and signup

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -93,3 +93,11 @@
     font-size: 60px;
   }
 }
+
+@media (max-width: 466px) {
+  .main_container {
+    width: 100%;
+    padding: 0;
+    flex-direction: row;
+  }
+}
