--- a/src/app/(afterLogin)/messages/[room]/chatRoom.module.css
+++ b/src/app/(afterLogin)/messages/[room]/chatRoom.module.css
@@ -40,6 +40,7 @@
   width: 64px;
   height: 64px;
   border-radius: 50%;
+  margin-bottom: 10px;
 }
 .message {
   padding-bottom: 24px;
@@ -77,4 +78,14 @@
   margin-top: 8px;
   color: #536471;
   font-size: 13px;
+}
+
+@media (max-width: 700px) {
+  .main {
+    width: 100%;
+  }
+
+  .header h2 {
+    margin: 0 0 0 20px;
+  }
 }
