--- a/src/app/(afterLogin)/home/page.module.css
+++ b/src/app/(afterLogin)/home/page.module.css
@@ -9,3 +9,16 @@
   flex-direction: column;
   align-items: stretch;
 }
+
+.loader {
+  animation: rotating 2s linear infinite;
+}
+
+@keyframes rotating {
+  from {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}
