fix typo in env variable, adding login/sign up function with server, updating layout and components with auth function

--- a/src/app/(beforeLogin)/_component/modal/modal.module.css
+++ b/src/app/(beforeLogin)/_component/modal/modal.module.css
@@ -141,6 +141,10 @@
 .message {
   font-size: 13px;
   margin-bottom: 5px;
+  color: red;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
 }
 
 @media (max-width: 466px) {
