fixing type error and synchronizing follow/unfollow function in [username]

--- a/src/app/(afterLogin)/[username]/profile.module.css
+++ b/src/app/(afterLogin)/[username]/profile.module.css
@@ -78,6 +78,14 @@
 .followButton:hover {
   background-color: rgb(39, 44, 48);
 }
+.followButton.followed {
+  background: white;
+  color: black;
+  border: 1px solid grey;
+}
+.followButton.followed:hover {
+  background: lightgray;
+}
 .backButton {
   width: 34px;
   height: 34px;
